@@ -2,6 +2,7 @@
 [no-subsection-numbers]
 
 [section#v1_0_4 Version 1.0.4, 201Y-MM-DD]
+- Fixed a bug in the Low-Trust version of the `CharStream` constructors that accept a file path argument: The stream's `Name` property wasn't initialized. Maxime Didier reported this bug and [url "https://github.com/stephan-tolksdorf/fparsec/pull/20" provided a fix] -- thanks Maxime!
 - Fixed missing parser definitions in the @Parsing JSON@ section of the tutorial spotted by Josh Quintus -- thanks Josh!
 [/section]
 
